--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@nextui-org/react": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "chart.js": "^4.4.2",
+    "leaflet": "^1.9.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.6.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
