--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@nextui-org/react": "^2.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
+    "@tanstack/react-query": "^5.45.1",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.2",
     "leaflet": "^1.9.4",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.6.0",
-    "react-leaflet": "^4.2.1"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
