--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@nextui-org/react": "^2.4.2",
+    "@tanstack/react-form": "^0.23.3",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
