--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
+    "framer-motion": "^11.2.11",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
