--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.4.2",
     "@tanstack/react-form": "^0.23.3",
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.48.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.2.11",
