--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.48.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.11",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
