--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-simple-image-slider": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
