--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
-    "react-simple-image-slider": "^2.4.1"
+    "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
